--- a/src/main/resources/assets/moborigins/lang/ru_ru.json
+++ b/src/main/resources/assets/moborigins/lang/ru_ru.json
@@ -1,5 +1,5 @@
 {
-  "enchantment.moborigins.heat_protection": "Тепловая защита",
+  "enchantment.moborigins.heat_protection": "Защита от жары",
   "death.attack.split": "%1$s разделился на ничто.",
   "death.attack.split.player": "%1$s разделился, пока пытался сбежать от %2$s.",
   "text.moborigins.become_elder": "Вы превратились в Древнего Стража!",
