--- a/src/main/resources/assets/moborigins/lang/ru_ru.json
+++ b/src/main/resources/assets/moborigins/lang/ru_ru.json
@@ -102,7 +102,7 @@
   "power.moborigins.full_moon.description": "Когда восходит полная луна, вы становитесь быстрее, сильнее и живучие.",
 
   "power.moborigins.wolf_body.name": "Волкоподобный",
-  "power.moborigins.wolf_body.description": "У вас на 2 сердца меньше, чем у людей."
+  "power.moborigins.wolf_body.description": "У вас на 2 сердца меньше, чем у людей.",
   
   "origin.moborigins.bee.name": "Пчела",
   "origin.moborigins.bee.description": "Опыляющий мир летающее насекомое, что разносит цветы и мед повсюду.",
