--- a/src/main/resources/assets/moborigins/lang/ru_ru.json
+++ b/src/main/resources/assets/moborigins/lang/ru_ru.json
@@ -45,7 +45,7 @@
   "power.moborigins.lava_speed.description": "Обычно вы медленный, но развиваете огромную скорость на лаве.",
 
   "power.moborigins.rideable_creature.name": "Ездовое существо",
-  "power.moborigins.rideable_creature.description": "Другие игроки могут кататься на вас!",
+  "power.moborigins.rideable_creature.description": "Другие игроки могут ездить на вас!",
 
   "origin.moborigins.evoker.name": "Заклинатель",
   "origin.moborigins.evoker.description": "Мастера магии и коллекционеры тотемов.",
