--- a/src/main/resources/assets/moborigins/lang/ru_ru.json
+++ b/src/main/resources/assets/moborigins/lang/ru_ru.json
@@ -119,7 +119,7 @@
   "power.moborigins.queen_bee.name": "Королева пчёл",
   "power.moborigins.queen_bee.description": "Когда ты собираешь мёд, пчёлы не будут пытаться атаковать тебя.",
 
-  "power.moborigins.small_bug.name": "Малый жук",
+  "power.moborigins.small_bug.name": "Маленький жук",
   "power.moborigins.small_bug.description": "У вас на 2 сердца меньше, чем у людей.",
 
   "power.moborigins.bee_wings.name": "Пчелинные крылья",
