--- a/src/main/resources/assets/moborigins/lang/ru_ru.json
+++ b/src/main/resources/assets/moborigins/lang/ru_ru.json
@@ -9,16 +9,16 @@
   "origin.moborigins.snowgolem.description": "Големы созданные из снега. Слабы ко всему, что может их растопить.",
 
   "power.moborigins.heat_weakness.name": "Таяние",
-  "power.moborigins.heat_weakness.description": "Вы получаете урон в жарких биомах.",
+  "power.moborigins.heat_weakness.description": "Ты получаешь урон в жарких биомах.",
 
   "power.moborigins.greater_golems.name": "Усиленные големы",
   "power.moborigins.greater_golems.description": "Снеговики сделанные тобой более сильные.",
 
   "power.moborigins.stronger_snowballs.name": "Мощные снежки",
-  "power.moborigins.stronger_snowballs.description": "Брошенные вами снежки, набитые льдом, наносят 1 урон!",
+  "power.moborigins.stronger_snowballs.description": "Брошенные тобою снежки - набитые льдом, поэтому наносят 1 урон!",
 
   "power.moborigins.snow_trail.name": "Снежный след",
-  "power.moborigins.snow_trail.description": "Вы оставляете след из снега.",
+  "power.moborigins.snow_trail.description": "Ты оставляешь след из снега.",
 
   "power.moborigins.frigid_strength.name": "Сила холода",
   "power.moborigins.frigid_strength.description": "Наносите больше урона в холодных биомах.",
@@ -27,31 +27,31 @@
   "origin.moborigins.witch.description": "Жестокие и бухтящие. Ведьмы - мастера зельеварения и прекрасно владеют магией.",
 
   "power.moborigins.potion_action.name": "Идеальные зелья",
-  "power.moborigins.potion_action.description": "Получите случайный эффект зелья в зависимости от ситуации, в которой вы находитесь.",
+  "power.moborigins.potion_action.description": "Получите случайный эффект зелья в зависимости от ситуации, в которой ты находишься.",
 
   "power.moborigins.pillager_aligned.name": "Признан разбойниками",
   "power.moborigins.pillager_aligned.description": "Крестьяне тебя ненавидят, но ты нравишься разбойникам!",
 
   "power.moborigins.better_potions.name": "Улучшенные зелья",
-  "power.moborigins.better_potions.description": "Вы употребляете зелья лучше, чем большинство, поэтому они прослужат дольше, когда выпьете их.",
+  "power.moborigins.better_potions.description": "Ты употребляешь зелья лучше, чем большинство, поэтому они прослужат дольше, когда выпьешь их.",
 
   "origin.moborigins.strider.name": "Лавомерка",
   "origin.moborigins.strider.description": "Путешествуете по бескрайним океанам лавы со скоростью лавомерки.",
 
   "power.moborigins.lava_walk.name": "Ходящий по лаве",
-  "power.moborigins.lava_walk.description": "У вас есть возможность ходить по источникам лавы!",
+  "power.moborigins.lava_walk.description": "У тебя есть возможность ходить по источникам лавы!",
 
   "power.moborigins.lava_speed.name": "Адепт лавы",
-  "power.moborigins.lava_speed.description": "Обычно вы медленный, но развиваете огромную скорость на лаве.",
+  "power.moborigins.lava_speed.description": "Обычно ты медленный, но развиваешь огромную скорость на лаве.",
 
   "power.moborigins.rideable_creature.name": "Ездовое существо",
-  "power.moborigins.rideable_creature.description": "Другие игроки могут ездить на вас!",
+  "power.moborigins.rideable_creature.description": "Другие игроки могут ездить на тебе!",
 
   "origin.moborigins.evoker.name": "Заклинатель",
   "origin.moborigins.evoker.description": "Мастера магии и коллекционеры тотемов.",
 
   "power.moborigins.summon_fangs.name": "Вызыватель",
-  "power.moborigins.summon_fangs.description": "Мы можете вызывать других заклинателей!",
+  "power.moborigins.summon_fangs.description": "Ты можешь вызывать других заклинателей!",
 
   "power.moborigins.lower_totem_chance.name": "Чародейские тотемы",
   "power.moborigins.lower_totem_chance.description": "Тотемы имеют 10% шанс не сломаться.",
@@ -65,8 +65,8 @@
   "power.moborigins.guardian_ally.name": "Союзник стражей",
   "power.moborigins.guardian_ally.description": "Стражи не атакуют тебя!",
 
-  "power.moborigins.monument_spawn.name": "Крепость ваш дом",
-  "power.moborigins.monument_spawn.description": "Вы появляетесь в подводной крепости.",
+  "power.moborigins.monument_spawn.name": "Крепость твой дом",
+  "power.moborigins.monument_spawn.description": "Ты появляешься в подводной крепости.",
   
   "power.moborigins.land_slowness.name": "Зыбучая земля",
   "power.moborigins.land_slowness.description": "Ты медленный, когда на земле.",
@@ -78,7 +78,7 @@
   "power.moborigins.elder_magic.description": "Вызывайте облако с эффектом усталости.",
 
   "power.moborigins.mining_fatigue_immune.name": "Иммунитет древних",
-  "power.moborigins.mining_fatigue_immune.description": "У вас иммунитет к усталости.",
+  "power.moborigins.mining_fatigue_immune.description": "У тебя иммунитет к усталости.",
 
   "power.moborigins.elder_spikes.name": "Шипы древних",
   "power.moborigins.elder_spikes.description": "Более сильные шипы, у которых есть шанс нанести урон атакующим!",
@@ -90,10 +90,10 @@
   "power.moborigins.bouncy.description": "Все блоки действуют как блоки слизи.",
 
   "power.moborigins.split.name": "Способность разделения",
-  "power.moborigins.split.description": "Обменивайте свои очки здоровья на призыв маленькой слизи, что защитит вас!",
+  "power.moborigins.split.description": "Обменивайте свои очки здоровья на призыв маленькой слизи, что защитит тебя!",
 
   "power.moborigins.small_weak.name": "Слабость низких",
-  "power.moborigins.small_weak.description": "Когда вы теряете больше 2 сердец, вы больше не наносите урона, но ваши атаки сильнее отбрасывают!",
+  "power.moborigins.small_weak.description": "Когда ты теряешь больше 2 сердец, ты больше не наносишь урона, но твои атаки сильнее отбрасывают!",
 
   "origin.moborigins.wolf.name": "Волк",
   "origin.moborigins.wolf.description": "Сильные и быстрые. Волки - существа, чья сила в их количестве.",
@@ -102,16 +102,16 @@
   "power.moborigins.alpha_wolf.description": "Прирученные тобою волки более сильные!",
 
   "power.moborigins.full_moon.name": "Подобие оборотня",
-  "power.moborigins.full_moon.description": "Когда восходит полная луна, вы становитесь быстрее, сильнее и живучие.",
+  "power.moborigins.full_moon.description": "Когда восходит полная луна, ты становишся быстрее, сильнее и живучие.",
 
   "power.moborigins.wolf_body.name": "Волкоподобный",
-  "power.moborigins.wolf_body.description": "У вас на 2 сердца меньше, чем у людей.",
+  "power.moborigins.wolf_body.description": "У тебя на 2 сердца меньше, чем у людей.",
   
   "origin.moborigins.bee.name": "Пчела",
   "origin.moborigins.bee.description": "Опыляющий мир летающее насекомое, что разносит цветы и мед повсюду.",
 
   "power.moborigins.stinger.name": "Жало",
-  "power.moborigins.stinger.description": "Когда вы бьёте кого-либо рукой, вы  отравляешь на несколько секунд.",
+  "power.moborigins.stinger.description": "Ты способен отравлять кого-либо на несколько секунд, когда бьёшь рукой.",
 
   "power.moborigins.flower_power.name": "Сила цветов",
   "power.moborigins.flower_power.description": "Когда рядом много цветов, ты регенируешь здоровье.",
@@ -120,10 +120,10 @@
   "power.moborigins.queen_bee.description": "Когда ты собираешь мёд, пчёлы не будут пытаться атаковать тебя.",
 
   "power.moborigins.small_bug.name": "Маленький жук",
-  "power.moborigins.small_bug.description": "У вас на 2 сердца меньше, чем у людей.",
+  "power.moborigins.small_bug.description": "У тебя на 2 сердца меньше, чем у людей.",
 
   "power.moborigins.bee_wings.name": "Пчелинные крылья",
-  "power.moborigins.bee_wings.description": "Вы можете использовать свои крошечные пчелиные крылышки, как способность, чтобы спускаться медленнее."
+  "power.moborigins.bee_wings.description": "Ты можешь использовать свои крошечные пчелиные крылья, как способность, чтобы спускаться медленнее."
 
 
 
