--- a/src/main/resources/assets/moborigins/lang/ru_ru.json
+++ b/src/main/resources/assets/moborigins/lang/ru_ru.json
@@ -14,7 +14,7 @@
   "power.moborigins.greater_golems.name": "Усиленные големы",
   "power.moborigins.greater_golems.description": "Снеговики сделанные тобой более сильные.",
 
-  "power.moborigins.stronger_snowballs.name": "Мощные снежки",
+  "power.moborigins.stronger_snowballs.name": "Обледенелые снежки",
   "power.moborigins.stronger_snowballs.description": "Брошенные тобою снежки - набитые льдом, поэтому наносят 1 урон!",
 
   "power.moborigins.snow_trail.name": "Снежный след",
