--- a/src/main/resources/assets/moborigins/lang/ru_ru.json
+++ b/src/main/resources/assets/moborigins/lang/ru_ru.json
@@ -123,7 +123,7 @@
   "power.moborigins.small_bug.description": "У тебя на 2 сердца меньше, чем у людей.",
 
   "power.moborigins.bee_wings.name": "Пчелиные крылья",
-  "power.moborigins.bee_wings.description": "Ты можешь использовать свои крошечные пчелиные крылья, чтобы медленнее падать."
+  "power.moborigins.bee_wings.description": "Ты можешь использовать свои крошечные пчелиные крылья, чтобы медленнее падать.",
 
   "origin.moborigins.fox.name": "Лиса",
   "origin.moborigins.fox.description": "Милые и хитрые. Лисы - робкие существа, что любят поедать ягоды и воровать предметы.",
